<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Ranking">

    <TextView
        android:id="@+id/labelLugar3"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/labelLugar4"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#1BBCBB"
        android:textColorHighlight="#1BBCBB"
        android:textIsSelectable="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4Lugar"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView4Lugar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/labelLugar6"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/labelLugar5"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#1BBCBB"
        android:textColorHighlight="#1BBCBB"
        android:textIsSelectable="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView5Lugar"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView5Lugar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/labelLugar2"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/labelLugar2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#1BBCBB"
        android:textColorHighlight="#1BBCBB"
        android:textIsSelectable="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2Lugar"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView2Lugar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/labelLugar"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/labelLugar3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#1BBCBB"
        android:textColorHighlight="#1BBCBB"
        android:textIsSelectable="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3Lugar"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView3Lugar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4Lugar"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/white"
        android:foregroundGravity="left"
        android:gravity="left"
        android:textColorHighlight="#1BBCBB"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3Lugar"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/textView5Lugar"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/white"
        android:foregroundGravity="left"
        android:gravity="left"
        android:textColorHighlight="#1BBCBB"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4Lugar"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/textView3Lugar"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="10dp"


        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/white"
        android:foregroundGravity="left"
        android:gravity="left"
        android:textColorHighlight="#1BBCBB"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2Lugar"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/textView2Lugar"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/white"
        android:foregroundGravity="left"
        android:gravity="left"
        android:textColorHighlight="#1BBCBB"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1Lugar"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textViewPontacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginRight="160dp"
        android:layout_marginBottom="25dp"

        android:foregroundGravity="top"
        android:gravity="left|center_vertical"
        android:includeFontPadding="true"
        android:inputType="text"
        android:text="Pontuação"
        android:textColor="#1BBCBB"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/textView1Lugar"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginEnd="50dp"

        android:layout_marginRight="50dp"
        android:background="@color/white"
        android:foregroundGravity="left"
        android:gravity="left"
        android:textColorHighlight="#1BBCBB"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211" />

    <TextView
        android:id="@+id/labelLugar1"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:text="@string/labelLugar1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#1BBCBB"
        android:textColorHighlight="#1BBCBB"
        android:textIsSelectable="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView1Lugar"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView1Lugar"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>